--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,17 @@
 .option-item:active {
   @apply scale-100 shadow-lg;
 }
+
+
+.btn-login {
+  background-color: #01447C;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.btn-login:hover {
+  background-color: #012b4c;
+}
